6/4/12 add rounded corners to background areas of spinners, using CAG
# 0.00.14 (64615) Jun 4, 2012
6/4/12 first pass at new spinner design in interactive equations
5/31/12 always update line manipulators on endDrag, so that equation is displayed
5/31/12 snap to grid while dragging line manipulators (flag LGConstants.SNAP_TO_GRID_WHILE_DRAGGING)
5/31/12 right justify numbers in spinners
5/31/12 point-slope: don't change sign in static part of interactive equation for spinners implementation
5/31/12 slope-intercept: don't change sign in static part of interactive equation for spinners implementation
5/31/12 increase stroke width of dividing line in interactive equations, standarize font size
5/30/12 fix copy constructor for StraightLine
5/30/12 point-slope: hide zeros when reducing equations
5/29/12 point-slope: first pass at interactive equation (uses spinners)
5/29/12 rename interactive equation node implementations to indicate what type of controls they use (spinners, pickers,...)
5/29/12 move SpinnerNode and subclasses to linegraphing.common.view
5/29/12 point-slope: factory for creating reduced forms of (y-y1)=m(x-x1)
5/29/12 point-slope: skip over values that would result in slope=0/0
5/29/12 add -startModule command line dev arg
5/29/12 point-slope: dynamically adjust ranges for rise, run, x1, x2
5/29/12 slope-intercept: don't bother with slope=0/0 when adjusting ranges, handle post manipulation
5/29/12 point-slope: fix positioning of slope manipulator
5/29/12 point-slope: use lighter blue for (x1,y1) manipulator
5/29/12 reduced point-slope form when rise=0
5/29/12 when run=0, position line at (x1); when rise=0, position line at y1
5/29/12 first pass at (x1,y1) manipulator, not quite right
5/29/12 adjust rise/run bracket placement to account for (x1,y1)
5/29/12 implement factory method for simplest form of point-slope, for debugging
5/29/12 flesh out point-slope specializations
5/29/12 more base class extraction